name:                depviz
version:             0.1.0.0
synopsis:            GraphViz + Hackage to Visuaalize Dependency Graphs
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
build-type:          Simple
cabal-version:       >=1.10

executable depviz
  main-is:             Main.hs
  other-extensions:    UnicodeSyntax, TupleSections, ScopedTypeVariables,
                       OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
               ,       Cabal >=1.22 && <1.23
               ,       containers >=0.5 && <0.6
               ,       fgl >=5.5 && <5.6
               ,       graphviz
               ,       hackage-db >=1.22 && <1.23
               ,       text >=1.2 && <1.3
