name:                depviz
version:             0.1.0.0
synopsis:            GraphViz + Hackage to Visualize Dependency Graphs
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
build-type:          Simple
cabal-version:       >=1.10

executable depviz
  main-is:             Main.hs
  ghc-options:         -Wall
  other-extensions:    UnicodeSyntax, TupleSections, ScopedTypeVariables,
                       OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
               ,       Cabal
               ,       containers
               ,       fgl
               ,       graphviz
               ,       hackage-db
               ,       text
